; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_flvenc.c_ff_flv2_encode_ac_esc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_flvenc.c_ff_flv2_encode_ac_esc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_flv2_encode_ac_esc(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp slt i32 %11, 64
  br i1 %12, label %13, label %25

13:                                               ; preds = %5
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @put_bits(i32* %14, i32 1, i32 0)
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* %10, align 4
  %18 = call i32 @put_bits(i32* %16, i32 1, i32 %17)
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @put_bits(i32* %19, i32 6, i32 %20)
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @put_sbits(i32* %22, i32 7, i32 %23)
  br label %37

25:                                               ; preds = %5
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 @put_bits(i32* %26, i32 1, i32 1)
  %28 = load i32*, i32** %6, align 8
  %29 = load i32, i32* %10, align 4
  %30 = call i32 @put_bits(i32* %28, i32 1, i32 %29)
  %31 = load i32*, i32** %6, align 8
  %32 = load i32, i32* %9, align 4
  %33 = call i32 @put_bits(i32* %31, i32 6, i32 %32)
  %34 = load i32*, i32** %6, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @put_sbits(i32* %34, i32 11, i32 %35)
  br label %37

37:                                               ; preds = %25, %13
  ret void
}

declare dso_local i32 @put_bits(i32*, i32, i32) #1

declare dso_local i32 @put_sbits(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
